@@ -15,10 +15,7 @@ gsl_root_fsolver_type;
 
 typedef struct
   {
-    const char *name;
-    size_t size;
-    int (*set) (void *state, gsl_function * f, double * root, gsl_interval * x);
-    int (*iterate) (void *state, gsl_function * f, double * root, gsl_interval * x);
+    const gsl_root_fsolver_type * type;
     gsl_function * function ;
     double root ;
     gsl_interval interval ;
@@ -37,10 +34,7 @@ gsl_root_fdfsolver_type;
 
 typedef struct
   {
-    const char *name;
-    size_t size;
-    int (*set) (void *state, gsl_function_fdf * f, double * root);
-    int (*iterate) (void *state, gsl_function_fdf * f, double * root);
+    const gsl_root_fdfsolver_type * type;
     gsl_function_fdf * fdf ;
     double root ;
     void *state;
@@ -51,6 +45,8 @@ gsl_root_fsolver *
 gsl_root_fsolver_alloc (const gsl_root_fsolver_type * T, 
 			 gsl_function * f, gsl_interval x);
 void gsl_root_fsolver_free (gsl_root_fsolver * s);
+
+const char * gsl_root_fsolver_name (const gsl_root_fsolver * s);
 
 int gsl_root_fsolver_set (gsl_root_fsolver * s, 
 			   gsl_function * f, gsl_interval x);
@@ -76,6 +72,8 @@ gsl_root_fdfsolver_iterate (gsl_root_fdfsolver * s);
 void
 gsl_root_fdfsolver_free (gsl_root_fdfsolver * s);
 
+const char * gsl_root_fdfsolver_name (const gsl_root_fdfsolver * s);
+double gsl_root_fdfsolver_root (const gsl_root_fdfsolver * s);
 
 int
 gsl_root_test_interval (gsl_interval x, double rel_epsilon, double abs_epsilon);
